# yolo-retail-ai-agent

./: .gitignore  AGENTS.md  LICENSE  README.md
agent/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
agent/app/: config.py  main.py
agent/app/routers/: __init__.py  audit.py  chat.py  planogram.py
agent/app/schemas/: audit.py  planogram.py
agent/app/services/: __init__.py  agent.py  detector.py  planogram_store.py  store.py
agent/tests/: __init__.py  test_agent.py
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/routers/: __init__.py  audit.py  auth.py  chat.py  database.py  media.py  planogram.py  tickets.py
backend/app/schemas/: __init__.py  audit.py  auth.py  chat.py  common.py  database.py  planogram.py  tickets.py
backend/app/services/: __init__.py  agent.py  auth.py  backup.py  closed_loop.py  detector.py  media.py  observation_store.py  planogram_match.py  planogram_store.py  store.py  ticket_store.py  user_store.py  webhooks.py
backend/tests/: __init__.py  test_agent.py  test_backup_media.py  test_closed_loop.py
dataset/: README.md  gap-product-chinese-yolov8.py  gap-product-yolov8.py  pyproject.toml  sku-1kimg-yolov8.py  sku-gap-700img-yolov8.py
doc/: developing_rules.md  developing_rules_cn.md  instruction.md  instruction_cn.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: audit.ts  auth.ts  chat.ts  client.ts  database.ts  index.ts  planogram.ts  stream.ts  tickets.ts
frontend/src/components/accounts/: AccountsPanel.module.css  AccountsPanel.tsx
frontend/src/components/audit/: ImageUploadPanel.module.css  ImageUploadPanel.tsx
frontend/src/components/auth/: LoginPanel.module.css  LoginPanel.tsx
frontend/src/hooks/: useAgentChat.ts  useAuditAnalysis.ts  useAuth.ts  useCameraStreams.ts
frontend/src/lib/: background.ts  i18n.ts  id.ts  liquidLens.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/types/: audit.ts  auth.ts  chat.ts  database.ts  index.ts  planogram.ts  tickets.ts
model/: goods-and-gap-chinese-2-yolo11n.py  pyproject.toml  requirements.txt
model-local/: README.md  detection.py  main-on-screen.py  main.py  pyproject.toml  stream_server.py
model-local/tests/: test_detection.py  test_occlusion.py  test_stream_burst.py
model-roboflow/: README.md  main.py  pyproject.toml  requirements.txt  stream-goods-and-gap-chinese-2-yolo11n.py
model-roboflow/model-cache/: usage.db
model/gap-detection/: README.md  __init__.py  common.py  export.py  predict.py  train.py  validate.py
train/: README.md  common.py  eval_report.py  export.py  imbalance.py  merge_datasets.py  predict.py  pyproject.toml  requirements.txt  train.py  validate.py
train/tests/: test_eval_report.py  test_imbalance.py  test_merge_datasets.py  test_prepare_oversample.py  test_train_cli.py
(+18 files in other folders)
