[project]
name = "yolo-retail-backend"
version = "0.1.0"
description = "FastAPI application backend (LLM + model-local vision proxy)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Runtime HTTP client used by services (local vision + LLM).
    "httpx[socks]>=0.27",
    # Silences Starlette TestClient deprecation (fastapi.testclient prefers httpx2).
    "httpx2>=0.2",
    "sqlalchemy>=2.0,<3",
    "pyjwt>=2.8,<3",
    "bcrypt>=4.0,<5",
    "psycopg[binary]>=3.1,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
